@@ -4271,3 +4271,9 @@ Disassembly of section \.text:
     429c:	d513040f 	msr	dbgdtr_el0, x15
     42a0:	d533040f 	mrs	x15, dbgdtr_el0
     42a4:	d533050f 	mrs	x15, dbgdtrrx_el0
+    42a8:	d518c04f 	msr	rmr_el1, x15
+    42ac:	d538c04f 	mrs	x15, rmr_el1
+    42b0:	d51cc04f 	msr	rmr_el2, x15
+    42b4:	d53cc04f 	mrs	x15, rmr_el2
+    42b8:	d51ec04f 	msr	rmr_el3, x15
+    42bc:	d53ec04f 	mrs	x15, rmr_el3
